# pb-safety-demo

./: .gitlab-ci.yml  CMakeLists.txt  PVB_DB-1.db  PVB_DB.db  calculations_of_energy_potentials_window.cpp  calculations_of_energy_potentials_window.h  database_connection.cpp  database_connection.h  install_redos_shortcut.sh  main.cpp  mainwindow.cpp  mainwindow.h  reports.qrc  run.sh  start.sh
.github/workflows/: cross-platform-release.yml  linux-release.yml  windows-release.yml
